--- a/client/package.json
+++ b/client/package.json
@@ -37,5 +37,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "resolutions": {
+"normalize-url": "^6.0.1",
+"css-what": "^5.0.1",
+"glob-parent": "5.1.2",
+"postcss": "8.2.10 ",
+"browserslist": "4.16.5"
+}
 }
