--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^1.1.5",
     "react-toastify": "^7.0.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
@@ -37,12 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "resolutions": {
-"normalize-url": "^6.0.1",
-"css-what": "^5.0.1",
-"glob-parent": "5.1.2",
-"postcss": "8.2.10 ",
-"browserslist": "4.16.5"
-}
+  }
 }
